Fix alignment bugs with template, .prose, .verse

--- a/css/prose.css
+++ b/css/prose.css
@@ -8,6 +8,7 @@
 .prose {
     text-align: justify;
     max-width: 39em;
+    margin: auto;
     hyphens: auto;
     -moz-hyphens: auto;
 }
